# watcher_scanner

./: .pre-commit-config.yaml  Makefile  README.md  local.py  pyproject.toml  setup.py
requirements/: requirements-lint.txt  requirements-lock.txt  requirements-src.txt  requirements-tests.txt
src/watcher_scanner/: one_shot_runner.py  one_shot_scanner_runner.py  scanners_registry.py  schema.py
src/watcher_scanner/scanners/: __init__.py  scanner.py
src/watcher_scanner/scanners/windows_ad_scanner/: windows_ad_scanner.py
src/watcher_scanner/scanners_registry/: __init__.py  scanners_registry.py  schema.py
src/watcher_scanner/scanners_registry/scanners/: scanner.py
src/watcher_scanner/scanners_registry/scanners/windows_ad_scanner/: windows_ad_scanner.py
